--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -12,12 +12,14 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^6.3.0"
+    "@prisma/client": "^6.3.0",
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0"
   },
   "devDependencies": {
-    "prisma": "^6.3.0",
     "@repo/typescript-config": "*",
-    "typescript": "5.9.2",
-    "@types/node": "^22.15.3"
+    "@types/node": "^22.15.3",
+    "prisma": "^6.3.0",
+    "typescript": "5.9.2"
   }
 }
